# AIwerewolf

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Makefile  README.md  REQUIREMENTS.md  SKILLS.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_merge.py
backend/: app.py
bfs_simulator/: __main__.py  _simulator.py  endings.json  game_state.py
configs/: demo.yaml  discrimination_strategies.yaml  rule_variant_standard.yaml  strategy_library.yaml
docs/: AGENT_ARCHITECTURE_COMPARISON.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN_GUIDE.md  B_REVIEW_VALIDATION_PLAN.md  DATA_FLOW.md  DEVELOPMENT_ISSUES.md  ENGINEERING_ARCHITECTURE.md  EXPERIMENT_SECTION_DESIGN.md  FINAL_DELIVERY_PACKAGE.md  FINAL_SHOWCASE_REPORT.md  FIXED_REPLAY_DEMO.html  MBTI_TRACK_C_AUXILIARY_ANALYSIS.md  MODULE_EFFECT_EXPERIMENT_RESULTS.md  OPTIMIZATION_BENCHMARK.md  PRODUCT_INTRO.md  PRODUCT_TECH_DOC.md  PROJECT_ACCEPTANCE_REPORT.md  PROJECT_CLOSURE_FACTS.json  PROJECT_DESIGN_HISTORY.md  PROJECT_EFFECT_ANALYSIS.md  PROJECT_EXPERIMENT_PLAN_AND_PLACEHOLDERS.md  PROJECT_FINAL_FACTS.json  PROJECT_FINAL_FIGURES.md  PROJECT_FINAL_REPORT_DRAFT.md  PROJECT_METHOD_EFFECTIVENESS_EXPERIMENTS.md  PROJECT_METHOD_EFFECTIVENESS_FACTS.json  PROJECT_METHOD_EFFECTIVENESS_STATISTICS.json  PROJECT_METHOD_EFFECTIVENESS_STATISTICS.md  PROJECT_MODULE_DESIGN.md  PROJECT_PROVIDER_PREFLIGHT.json  PROJECT_REAL_LLM_FRAMEWORK_EVIDENCE.json  PROJECT_REAL_LLM_FRAMEWORK_EVIDENCE.md  PROJECT_REFERENCES.md  PROJECT_ROLE_RETRIEVAL_FACTS.json  PROJECT_ROLE_RETRIEVAL_QUANTIFICATION.md  PROJECT_STRATEGY_USAGE_DECISION_SCORE_ANALYSIS.md  PROJECT_TARGET_SEAT_AB_POWER_PLAN.json  PROJECT_TARGET_SEAT_AB_POWER_PLAN.md  README.md  RETRIEVAL_EFFECTIVENESS_ANALYSIS.md  (+30 more)
frontend/: .env.example  .gitignore  README.md  app.js  index.html  next.config.js  package-lock.json  package.json  proxy.ts  style.css  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
plans/: 1-2-image-3-skill-witty-treehouse.md
psycopg2/: __init__.py  extras.py
scripts/: analyze_formal_experiment_results.py  analyze_mbti.py  analyze_mbti_track_c_results.py  analyze_method_effectiveness_statistics.py  analyze_strategy_usage_decision_scores.py  auto_promote.py  batch_experiment.py  bench_optimizations.py  build_dashboard_data.py  build_rubric_demo.py  build_single_game_report_data.py  build_strategy_graph.py  build_v3_features.py  check_real_llm_provider.py  check_thought.py  cluster_promote.py  compare_ab.py  compute_game_quality.py  compute_v2_scores.py  crawl_general_strategies.py  crawl_strategies.py  crawl_tieba_strategies.py  crawl_zhihu_strategies.py  debug_full_game.py  debug_llm_test.py  doubao_extract_strategies.py  e2e_smoke.py  eval_agent_grep.py  eval_agentic_search.py  eval_all_retrievers.py  eval_final_retrieval.py  eval_hybrid_agentic_rrf.py  eval_retrieval.py  evaluate_retrieval_policies.py  evaluate_retrieval_policies_llm_judge.py  evolution_ab_test.py  evolution_test.py  feedback_promote.py  finetune_llm_batch.py  finetune_llm_verified.py  (+69 more)
search_simulator/: __init__.py  __main__.py  _game_state.py  _simulator.py  _sqlite_lru_signature_store.py  game_state.py  player.py
skills/: 00-team-overview.md  10-git-workflow.md  20-backend-conventions.md  30-frontend-conventions.md  40-agent-development.md  50-api-contract.md  60-testing-ci.md  70-ai-collaboration.md  README.md
tests/: conftest.py  fake_llm.py  test_api.py  test_b_full_acceptance.py  test_c_acceptance_verification.py  test_cognitive_offline.py  test_engine.py  test_full_victory_report.py  test_humanization.py  test_llm_config.py  test_prompt_layering.py  test_retrieval_policy.py  test_review_metrics.py  test_social_planner.py  test_summarize_method_effectiveness.py  test_summarize_real_llm_framework_runs.py  test_target_seat_trackc_ab_experiment.py  test_track_b_badcase_regression.py  test_track_b_badcase_wolf_regression.py  test_track_b_cleancase_wolf_regression.py  test_track_b_convergence.py  test_track_b_mbti_profile_evaluation.py  test_track_b_model_loading.py  test_track_c_evolution.py  (+9 more)
(+462 files in other folders)
