[project]
name = "ai-werewolf"
version = "0.1.0"
description = "AI Werewolf — multi-agent Mafia game with cognitive agents, evaluation, and self-evolution"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "wxhfy" },
]
keywords = [
    "multi-agent",
    "llm",
    "werewolf",
    "mafia",
    "reinforcement-learning",
    "game-theory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
ai-werewolf-preflight = "backend.ops.preflight:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.4",
    "pytest>=8.2",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long — handled by formatter
    "B008", # do not perform function calls in argument defaults
    "B904", # raise from within except
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--tb=short"]
