[project]
name = "ai-werewolf"
version = "0.1.0"
description = "AI Werewolf — multi-agent Mafia game with cognitive agents, evaluation, and self-evolution"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "wxhfy" },
]
keywords = [
    "multi-agent",
    "llm",
    "werewolf",
    "mafia",
    "reinforcement-learning",
    "game-theory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
ai-werewolf-preflight = "backend.ops.preflight:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.4",
    "pytest>=8.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E402",  # module-import-not-at-top-of-file — intentional (threading locks, conditional imports)
    "E501",  # line too long — handled by formatter
    "E722",  # bare-except — intentional in some error handling
    "E741",  # ambiguous-variable-name — common "l" in comprehensions
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from within except
    "SIM102", # collapsible-if — style preference
    "SIM105", # suppressible-exception — style preference
    "SIM108", # use ternary operator — style preference
    "SIM115", # open-file-with-context-handler — style preference
    "B905",  # zip-without-explicit-strict — style preference
    "UP042", # replace-str-enum — style preference
    "F811",  # redefined-while-unused — legitimate in __init__.py re-exports
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--tb=short"]
